投稿時にプルダウンで選択可能に

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Posts#index</h1>
 <table>
   <tr>
+    <th>マップID</th>
+    <th>ルールID</th>
+    <th>武器ID</th>
     <th>投稿者ID</th>
     <th>投稿者名</th>
     <th>投稿内容</th>
@@ -15,12 +18,15 @@
   <% else %>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.map.name %></td>
+        <td><%= post.rule.name %></td>
+        <td><%= post.weapon.name %></td>
         <td><%= post.user_id %></td>
         <td><%= post.user.name %></td>
         <td><%= post.description %></td>
         <td><%= link_to '詳細', post_path(post.id) %></td>
         <td><%= link_to '編集', edit_post_path(post.id) %></td>
-        <td>削除</td>
+        <td><%= link_to "削除", post, method: :delete, data: { confirm: "本当に削除しますか？" } %></td>
       <% end %>
     <% end %>
   </tr>
