--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,11 +2,11 @@
   <%= f.label :description, "メモ" %>
   <%= f.text_field :description %>
   <%= f.label :map_id, "map" %>
-  <%= f.number_field :map_id %>
+  <%= f.collection_select(:map_id, @maps, :id, :name) %>
   <%= f.label :rule_id, "rule" %>
-  <%= f.number_field :rule_id %>
+  <%= f.collection_select(:rule_id, @rules, :id, :name) %>
   <%= f.label :weapon_id, "weapon" %>
-  <%= f.number_field :weapon_id %>
+  <%= f.collection_select(:weapon_id, @weapons, :id, :name) %>
   <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.submit "Submit", disable_with: 'Submiting...' %>
 <% end %>
