アカウントをユーザー名で登録・ログインできるように変更。プロフィール、アカウント情報の変更画面を実装

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -62,7 +62,7 @@ body {
 }
 
 
-.show {
+.io_show {
   position: fixed;
   top: 56px;
   width: 100%;
@@ -159,7 +159,7 @@ body {
 
   #canvas,
   .pcw {
-    width: 750px;
+    width: 750px !important;
     margin: auto;
     ;
   }
