--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,28 +1,30 @@
-<%= form_with model: @post, local: true do |f| %>
-  <table>
-    <tr>
-      <th><%= f.label :map_id, "map" %></th>
-      <td><%= f.collection_select(:map_id, @maps, :id, :name) %></td>
-    </tr>
-    <tr>
-      <th><%= f.label :rule_id, "rule" %></th>
-      <td><%= f.collection_select(:rule_id, @rules, :id, :name) %></td>
-    </tr>
-    <tr>
-      <th><%= f.label :weapon_id, "weapon" %></th>
-      <td><%= f.collection_select(:weapon_id, @weapons, :id, :name) %></td>
-    </tr>
-    <tr>
-      <th><%= f.label :description, "メモ" %></th>
-      <td><%= f.text_field :description %></td>
-    </tr>
-  </table>
-  <%= f.hidden_field :user_id, value: current_user.id %>
-  <div>
-    <ul>
-      <li><%= f.submit "登録する"%></li>
-      <li><%= link_to "一覧に戻る", :posts %></li>
-    </ul>
-  </div>
-<% end %>
+<div id="panel_pulllist" class="panel_gray">
+
+  <%= form_with model: @post, local: true do |f| %>
+
+    <div class="selectbox">
+      <%= f.collection_select :map_id, @maps, :id, :name, {selected:@map_id},{class:'select_pull'} %>
+    </div>
+
+    <div class="selectbox">
+      <%= f.collection_select :rule_id, @rules, :id, :name, {selected:@rule_id}, {class:"select_pull"} %>
+    </div>
+
+    <div class="selectbox">
+      <%= f.collection_select :weapon_id, @weapons, :id, :name, {selected:@weapon_id}, {class:"select_pull"} %>
+    </div>
+
+    <%= f.hidden_field :user_id, value: current_user.id %>
+
+    <div class="panel_io"></div>
+    <div id="io_tgt" class="panel_gray pt-2 pb-2 text-center">
+      <%= f.submit "保存する", class:"fw-bold text-decoration-none fc-tako" %>
+    </div>
+
+    <div class="p-1 m-1 border border-secondary">
+      <%= f.text_field :description %>
+    </div>
+  <% end %>
+</div>
+<%= link_to "一覧に戻る", :posts %>
 <%= javascript_pack_tag 'select_change' %>
