--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -18,7 +18,7 @@
 
     <div class="panel_io"></div>
     <div id="io_tgt" class="panel_gray pt-2 pb-2 text-center">
-      <%= f.button "保存して閉じる", class:"fw-bold text-decoration-none fc-tako", id:"button_submit" %>
+      <%= f.submit "保存して閉じる", class:"btn hover_opacity fw-bold text-decoration-none fc-tako", id:"button_submit" %>
     </div>
 
     <div class="p-1 m-1 border border-secondary">
@@ -26,6 +26,6 @@
     </div>
   <% end %>
 </div>
-<%= link_to "一覧に戻る", :posts %>
 
 <%= javascript_pack_tag 'select_change' %>
+<%= javascript_pack_tag 'io_setting' %>
