--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,33 +1,35 @@
-<h3>プロフィール編集</h3>
+<div class="text-center card mt-5">
+  <div class="panel_w500">
 
-<% if  flash[:notice] %>
-  <div class="alert alert-success"><%= flash[:notice] %></div>
-<% elsif flash[:alert] %>
-  <div class="alert alert-danger"><%= flash[:alert] %></div>
-<% end %>
+    <h3>プロフィール編集</h3>
 
-<%= form_with model: @user, local: true do |f| %>
+    <% if  flash[:notice] %>
+      <div class="alert alert-success"><%= flash[:notice] %></div>
+    <% elsif flash[:alert] %>
+      <div class="alert alert-danger"><%= flash[:alert] %></div>
+    <% end %>
 
-  <div>
-    <div>
-      <%= f.label :description ,"自己紹介" %>
-    </div>
-    <div>
-      <%= f.text_area :description, value:@user.description, class:'form-control' %>
-    </div>
+    <%= form_with model: @user, local: true do |f| %>
+
+      <div>
+        <div>
+          <%= f.label :description ,"自己紹介", class:"form-label" %>
+          <%= f.text_area :description, value:@user.description, class:'form-control' %>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <%= f.label :description ,"お気に入り武器", class:"form-label" %>
+          <%= f.collection_select :favorite_weapon_id, @weapons, :id, :name, {selected:@favorite_weapon_id}, {class:"select_pull"} %>
+        </div>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "プロフィールを更新する", class:"btn fw-bold text-decoration-none fc-tako btn-tako-outline" %>
+      </div>
+
+    <% end %>
+
   </div>
-
-  <div>
-    <div>
-      <%= f.label :description ,"お気に入り武器" %>
-    </div>
-    <div>
-      <%= f.collection_select :favorite_weapon_id, @weapons, :id, :name, {selected:@favorite_weapon_id}, {class:"select_pull"} %>
-    </div>
-  </div>
-
-  <div>
-    <%= f.submit "プロフィールを更新する", class: "btn btn-primary" %>
-  </div>
-
-<% end %>
+</div>
