--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -29,3 +29,4 @@
 
 <%= javascript_pack_tag 'select_change' %>
 <%= javascript_pack_tag 'io_setting' %>
+<%= javascript_pack_tag 'toolbar_setting' %>
