--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,10 +19,11 @@
     <div class="panel_io"></div>
     <div id="io_tgt" class="panel_gray pt-2 pb-2 text-center">
       <%= f.submit "保存して閉じる", class:"btn hover_opacity fw-bold text-decoration-none fc-tako", id:"button_submit" %>
+      <trix-toolbar id="trix-toolbar"></trix-toolbar>
     </div>
 
     <div class="p-1 m-1 border border-secondary">
-      <%= f.rich_text_area :description %>
+      <%= f.rich_text_area :description, toolbar:"trix-toolbar" %>
     </div>
 
   <% end %>
@@ -30,3 +31,4 @@
 
 <%= javascript_pack_tag 'select_change' %>
 <%= javascript_pack_tag 'io_setting' %>
+<%= javascript_pack_tag 'toolbar_setting' %>
