--- a/app/views/shared/_parts_header.html.erb
+++ b/app/views/shared/_parts_header.html.erb
@@ -15,7 +15,7 @@
             <%= link_to 'マップ一覧', posts_path(anchor: 'maplist'), class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'ユーザー設定', profile_users_path , class:"nav-link"%>
+            <%= link_to 'プロフィール編集', profile_users_path , class:"nav-link"%>
           </li>
           <li class="nav-item">
             <%= link_to 'アカウント設定', edit_user_registration_path(id: current_user.id) , class: "nav-link"%>
