--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -13,8 +13,8 @@
 
       <div>
         <div>
-          <%= f.label :nickname ,"自己紹介", class:"form-label" %>
-          <%= f.text_area :nickname, value:@user.nickname, class:'form-control' %>
+          <%= f.label :nickname ,"ニックネーム", class:"form-label" %>
+          <%= f.text_field :nickname, value:@user.nickname, class:'form-control' %>
         </div>
       </div>
 
