--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,23 @@
-<p>map: <%= @post.map.name %></p>
-<p>rule: <%= @post.rule.name %></p>
-<p>weapon: <%= @post.weapon.name %></p>
-<h1>投稿詳細</h1>
-<p>memo: <%= @post.description %></p>
+<div class="panel_gray">
+  <h3 class="show_username"><%= @post.user.nickname %> さんのメモ</h3>
+  <ul class="show_taglist">
+    <li>#<%= @post.map.name %></li>
+    <li>#<%= @post.rule.name %></li>
+    <li>#<%= @post.weapon.name %></li>
+  </ul>
 
-<ul>
-  <li id="like_button_<%= @post.id %>">
-    <%= render 'shared/likebutton', post: @post %>
-  </li>
-</ul>
+  <div class="panel_io"></div>
+  <div id="io_tgt" class="panel_gray pt-2 pb-2 text-center">
+    <div id="like_button_<%= @post.id %>">
+      <%= render 'shared/likebutton', post: @post %>
+    </div>
+  </div>
+
+  <div class="p-1 m-1 border border-secondary">
+    <div>
+      <%= @post.description %>
+    </div>
+  </div>
+</div>
+
+<%= javascript_pack_tag 'io_setting' %>
