[add] ほかのユーザーの投稿を検索できる機能と、いいね機能を実装
Post#search_post メソッドでほかのユーザーの投稿を検索し、閲覧できる機能を実装。
検索条件は、マップ、ルール、ブキを選択できるように。
検索結果を増やすためにブキのcategory（マイナーチェンジ）を条件に追加できるオプションを実装。
検索結果のソート順は、いいねの数が多い順。
検索結果に表示する、メモの内容は40文字までに制限。

投稿を閲覧中(Post#show)には、非同期通信でいいねできる機能を追加。
いいねリストを取得するメソッドをlikeコントローラーに念のため実装済み。

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -104,6 +104,7 @@ hover_opacity:hover {
   color: #FFF;
   font-weight: bold;
   padding:1em 0px;
+  text-align: center;
 }
 
 /* 保存ボタンのフロート描写 */
@@ -175,8 +176,40 @@ hover_opacity:hover {
 
 /*  */
 
-#quill-editor-form {
-  display: none;
+/*立ち回りリスト*/
+
+#post_list a {
+  display: block;
+  text-decoration: none;
+  color: #333;
+  background-color: #EEE;
+  padding: 10px;
+  margin: 1em 0px;
+  border-radius: 15px;
+}
+
+#post_list p {
+  margin: 0px;
+  padding: 10px 0px;
+}
+
+.post_user {
+  font-weight: bold;
+}
+
+.post_description {
+  border-top: 1px solid #333;
+}
+
+.post_likes, .post_weapon {
+  padding-bottom: 0px!important;
+  font-size: 14px;
+  color: #555;
+}
+
+.form-check-input:checked{
+  background-color: #ff0043 !important;
+  border-color: #ff0043 !important
 }
 
 /* アニメーション */
