[update] 立ち回り検索機能にページネーションを追加
kaminari gemを利用して、Post#search_postにページネーションを実装。
25件を超えるとページを分割し、ページネーションが表示されるように設定

--- a/app/views/posts/search_post.html.erb
+++ b/app/views/posts/search_post.html.erb
@@ -35,7 +35,7 @@
     <% else %>
       <% @posts.each do |post| %>
         <% if post[:description].present? %>
-          <%= link_to post_path(post[:id]) do %>
+          <%= link_to post_path(post[:id]), class: "post_card" do %>
             <div>
               <p class="post_user">
                 <%= post[:user] %> さんのメモ
@@ -53,6 +53,7 @@
           <% end %>
         <% end %>
       <% end %>
+      <%= paginate @posts %>
     <% end %>
   <% end %>
 </div>
