--- a/app/views/shared/_parts_header.html.erb
+++ b/app/views/shared/_parts_header.html.erb
@@ -15,6 +15,9 @@
             <%= link_to 'マップ一覧', posts_path(anchor: 'maplist'), class:"nav-link" %>
           </li>
           <li class="nav-item">
+            <%= link_to '立ち回り検索', search_post_posts_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'プロフィール編集', profile_users_path , class:"nav-link"%>
           </li>
           <li class="nav-item">
