[fix] トップページにミスがあったので修正。ナビのアプリ名部分をトップリンクへ変更。残り時間の取得処理を修正
トップページのHTMLで div#canvas が重複していたので修正。
ナビゲーションバーのアプリ名部分を、トップページへのリンクタグへ変更。

スケジュールの残り時間計算において、意図した挙動になっていなかった為修正。
APIからutc基準の時間を取得するように変更し、JSTとの時差計算で正確な残り時間を取得できるように変更

--- a/app/views/shared/_parts_header.html.erb
+++ b/app/views/shared/_parts_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-tako fixed-top">
   <div class="container-fluid pcw">
-    <span class="navbar-brand fw-bold text-white" href="#">TAKOWidget2 R</span>
+    <%= link_to 'TAKOWidget2 R', posts_path, class:"navbar-brand fw-bold text-white" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
