[fix] スケジュールの時間表示がUTF基準になっていたのでJSTに修正
残り時間の計算式にUTF基準のデータを使うよう調整した際、スケジュールの時間表示の元データもUTF基準になってしまっていた為、JST基準のデータを使用するように修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
   <% @schedules.each do |schedule| %>
     <div class="panel_gray mt-2 mb-2 fw-bold">
       <div class="text-dark">
-        <% if schedule[:time_left] <= 0 %>
+        <% if schedule[:time_left] < 0 %>
           現在
         <% else %>
           <%= schedule[:time_left] %>時間後
