[update] タイトル画像とfaviconを追加・設定
トップページにタイトル画像を表示するように設定。
favicon用にiconファイルを追加し、headタグに設定追記。

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,8 @@
   </div>
 <% end %>
 
+<%= image_tag 'title01.jpg' %>
+
 <div id="schedule" class="text-center">
   <div class="midashi">
     スケジュール
