--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -18,9 +18,9 @@
     <div id="io_tgt" class="panel_gray pt-2 pb-2 text-center">
       <%= f.submit "保存して閉じる", class:"btn hover_opacity fw-bold text-decoration-none fc-tako", id:"button_submit" %>
     </div>
-
+    
     <div class="p-1 m-1 border border-secondary">
-      <%= f.rich_text_area :description, value:@post.description %>
+      <%= f.rich_text_area :description %>
     </div>
   <% end %>
 </div>
