[update] Twitter埋め込み機能の仮実装。ルーティングの調整。不要なコメントの削除。設定変更。
Twitterを埋め込む機能をテスト実装。
- 埋め込みデータの管理用に、ActionText::Attachableを継承する embed モデルを追加。
- Toolbar_setting.jsにTESTボタンを追加する処理を設定。confirmでURLを指定すると埋め込みができる。
- モジュール定義を利用する関係で、Trixの定義を application.js から embed_setting.js に移動。

ルーティングの調整
- embedを追加
- post#indexが重複して不要だったので削除

不要なコメントの削除
- posts_controller.rbに処理に関係ない不要なコメントがあったため削除。

設定変更
- 404ページなどをdevelop環境では表示せず、通常のエラーを出すように変更

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -30,3 +30,4 @@
 <%= javascript_pack_tag 'select_change' %>
 <%= javascript_pack_tag 'io_setting' %>
 <%= javascript_pack_tag 'toolbar_setting' %>
+<%= javascript_pack_tag 'embed_setting' %>
