--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -31,3 +31,4 @@
 <%= javascript_pack_tag 'io_setting' %>
 <%= javascript_pack_tag 'toolbar_setting' %>
 <%= javascript_pack_tag 'embed_setting' %>
+<script src="https://platform.twitter.com/widgets.js"></script>
