[update] 投稿保存時にリダイレクトしないように変更。jsをモジュール化してtriggerで呼び出すように変更。モーダルに関連するスタイルシートの調整
postをcreate・updateに成功したとき、リダイレクトすると表示位置がページ最上部になってしまうため、
モーダルを閉じて位置を保持するように変更。

trix関連の自作javascriptの読み込みが、ajax:successイベントだと、プルダウン変更やupdateエラーなどで読み込まれない。
対策として、各jsをモジュール化し、application.jsにてdiv#modal-editorにtriggerへイベントとして定義。
viewからtriggerを発火させることで、任意のタイミングでjsを走らせる仕様に変更して対応。

io_setting.jsを再設定。モーダルでもスクロールすると、上部に保存ボタンが固定されるように。
その他、モーダルに関わるスタイルをcommon.cssにて調整。

--- a/app/views/posts/edit.js.erb
+++ b/app/views/posts/edit.js.erb
@@ -1,2 +1,8 @@
 $("#modal-editor").html("<%= escape_javascript(render 'shared/editor', {post: @post, maps: @maps, rules: @rules, weapons: @weapons}) %>")
 $("#modal-editor").modal("show")
+
+<% if flash[:alert].present? %>
+  alert('<%= flash[:alert] %>')
+<% end %>
+
+$('#modal-editor').trigger('setting:editor')
