--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -137,9 +137,14 @@ img {
   width: 100%;
   z-index: 5;
   left: 0px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 /* ハンバーガー */
+nav {
+  z-index: 1060!important;
+}
+
 .navbar-toggler {
   border: none;
 }
@@ -194,6 +199,16 @@ img {
 }
 
 /*  */
+
+/* モーダル */
+.modal-dialog {
+  width: 95%!important;
+  max-width: 95%!important;
+  margin: auto!important;
+  margin-top: 64px!important;
+  margin-bottom: 20px!important;
+}
+
 
 /*立ち回りリスト*/
 #post_list {
@@ -269,10 +284,14 @@ img {
   font-weight: bold;
 }
 
-/* アニメーション */
+/* フラッシュメッセージの設定 */
+#flash-message {
+  z-index: 2000;
+}
+
 .anim_fadeout {
   animation: anim_fadeout 1s linear 0s 1 normal forwards;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
@@ -322,5 +341,10 @@ img {
   
   #post_list {
     margin: 10px 0px;
+  }
+  
+  .modal-dialog {
+    width: 750px!important;
+    max-width: 750px!important;
   }
 }
