[fix] モーダルの設定jsを、jQueryのtriggerからJSのカスタムイベントに仕様変更。不要なjsを削除。
モーダルの設定用jsをjQueryのtriggerで擬似的に関数化していたが、複数定義すると正常に定義されず、view側で呼び出せないバグがあった。
JSのカスタムイベントを用いる方法に変更。複数定義が可能になり、view側でカスタムイベントを呼び出すことでモーダル設定の処理を正常に呼び出せるように修正。

seach_post内に不要なjs読み込みが残っていたので削除。

--- a/app/views/posts/edit.js.erb
+++ b/app/views/posts/edit.js.erb
@@ -5,4 +5,5 @@ $("#modal-editor").modal("show")
   alert('<%= flash[:alert] %>')
 <% end %>
 
-$('#modal-editor').trigger('setting:editor')
+var settingEditor = new CustomEvent('settingEditor');
+document.getElementById('modal-editor').dispatchEvent(settingEditor);
