--- a/app/views/posts/show.js.erb
+++ b/app/views/posts/show.js.erb
@@ -1,4 +1,5 @@
 $("#modal-editor").html("<%= escape_javascript(render 'shared/viwer', post: @post) %>")
 $("#modal-editor").modal("show")
 
-$('#modal-editor').trigger('setting:viwer')
+var settingViwer = new CustomEvent('settingViwer');
+document.getElementById('modal-editor').dispatchEvent(settingViwer);
