--- a/app/views/shared/_viwer.html.erb
+++ b/app/views/shared/_viwer.html.erb
@@ -14,8 +14,7 @@
         <li>#<%= post.weapon.name %></li>
       </ul>
     
-      <div class="panel_io"></div>
-      <div id="io_tgt" class="panel_gray pt-2 pb-2 text-center">
+      <div class="panel_gray pt-2 pb-2 text-center">
         <div id="like_button_<%= post.id %>">
           <%= render 'shared/likebutton', post: post %>
         </div>
